--- a/conf/surgat.conf
+++ b/conf/surgat.conf
@@ -7,6 +7,13 @@ hostname=localhost
 port=10026
 
 [General]
-threads=5
-store_directory=store
+threads=3
+
+# If this is absent then messages will NOT be stored.
+# If not set to an absolute path it will be created relative to this file.
+store_directory=/tmp/surgat
+
+# By default if there is a problem with spamd we store the messsage, but setting
+# the following line to true will force delivery of the message.
+#forward_on_error=True
 
