Add the start of messages filtering to assist with development. Add mroe info to the configuration file. Log version when starting. Improve the config parsing.

--- a/conf/surgat.conf
+++ b/conf/surgat.conf
@@ -7,13 +7,40 @@ hostname=localhost
 port=10026
 
 [General]
+# How many threads should be started to process messages?
 threads=3
 
 # If this is absent then messages will NOT be stored.
 # If not set to an absolute path it will be created relative to this file.
-store_directory=/tmp/surgat
+# Messages with a .txt extension have been processed but need to be forwarded on,
+# those with a .eml extension need to be processed via spamd.
+#store_directory=/tmp/surgat
+
+# Messages above max_size will only see the first max_size bytes scanned, so the results may
+# be unreliable.
+max_size=500k
 
 # By default if there is a problem with spamd we store the messsage, but setting
 # the following line to true will force delivery of the message.
 #forward_on_error=True
 
+# Instead of forwarding messages that are blatantly spam, any message that scores above
+# the kill_level will be dropped (this will be logged).
+kill_level = 50
+
+# Filtering!
+# In order to assist with developing the spam fighting abilities, surgat can filter messages
+# to allow later review. This is ONLY done when
+#  1. server is started with the --filter command line argument
+#  2. a store_directory is set
+# If both these are true then every message that is processed will be evaluated and saved if
+# is amrked as spam or triggers either of the criteria that cane be set below.
+# The saved messages
+# - will be saved with into the store directory with a .saved extension
+# - are the final message body, including spam headers, is saved
+
+# To filter for specific email addresses add them here...
+#filter_addresses = ['<>']
+
+# To filter for all messages with a score above a value
+#filter_above = 10
