Add rudimentary stats collection for rules that have been triggered. Add install requirement to setup.py. Update README.md to advise of spamc requirement. Bump version to 0.3.0 to reflect additional functionality.

--- a/conf/surgat.conf
+++ b/conf/surgat.conf
@@ -28,7 +28,9 @@ max_size=500k
 # the kill_level will be dropped (this will be logged).
 kill_level = 50
 
+#
 # Filtering!
+#
 # In order to assist with developing the spam fighting abilities, surgat can filter messages
 # to allow later review. This is ONLY done when
 #  1. server is started with the --filter command line argument
@@ -44,3 +46,11 @@ kill_level = 50
 
 # To filter for all messages with a score above a value
 #filter_above = 10
+
+#
+# Rule Usage Statistics
+#
+# This is ONLY enabled if the --collect-stats command line argument is used.
+stats_report_interval = 1
+stats_report_to = david
+stats_report_from = david
