Allow the collection report interval to be specified using days or hours. Bump version number by .0.1

--- a/conf/surgat.conf
+++ b/conf/surgat.conf
@@ -51,6 +51,8 @@ kill_level = 50
 # Rule Usage Statistics
 #
 # This is ONLY enabled if the --collect-stats command line argument is used.
-stats_report_interval = 1
+# The interval given should be specified in minutes, but can also be given using 'h' for hours and 'd' for days,
+# e.g. 2d or 24h
+stats_report_interval = 24h
 stats_report_to = david
 stats_report_from = david
